# investment-automation

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  Makefile  Pipfile  README.md  cdk.context.json  config.toml  install_glibc.sh  pyproject.toml
.github/workflows/: workflow.yml
aws/: main.py
src/: __init__.py  api.py  buy_spy.py  calculate_porfolio_weights.py  config.py  enqueue_underlyings.py  env.py  environment.py  m1.py  main.py  market_data.py  market_metrics_processor.py  market_metrics_service.py  modules.py  option_chain_service.py  option_chains_processor.py  process_underlyings.py  quant.py  queue.py  quote_service.py  symbol_service.py  tastytrade_api.py  update_watchlist.py  watchlist_service.py
